--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <style>
-        body {
+        /* 新增以下部分，確保 body 和 html 的高度覆蓋整個視窗 */
+        html, body {
+            height: 100%;
             margin: 0;
             padding: 0;
+        }
+
+        body {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -22,9 +27,11 @@
             height: auto; 
         }
 
+        /* 修改背景圖片的樣式，確保其完整顯示 */
         .background-image {
             width: 100%;
-            height: auto;
+            height: 100vh; /* 改為100vh，確保背景圖片填滿整個視窗 */
+            object-fit: cover; /* 確保圖片按比例填充容器 */
             display: block;
         }
 
