--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <style>
+        /* 新增以下部分，確保 body 和 html 的高度覆蓋整個視窗 */
         html, body {
             height: 100%;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
         }
 
         body {
@@ -17,45 +17,51 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            background-color: #f0f0f0;
         }
 
         .container {
             position: relative;
             width: 100%;
-            max-width: 1000px;
-            height: auto;
-            background-image: url('https://i.pinimg.com/736x/96/93/3d/96933d955f20827f7c6d132a0102211b.jpg');
-            background-size: contain; /* 確保整張圖片完全顯示 */
-            background-repeat: no-repeat;
-            background-position: center;
+            max-width: 1000px; 
+            height: auto; 
+        }
+
+        /* 修改背景圖片的樣式，確保其完整顯示 */
+        .background-image {
+            width: 100%;
+            height: 100vh; /* 改為100vh，確保背景圖片填滿整個視窗 */
+            object-fit: cover; /* 確保圖片按比例填充容器 */
+            display: block;
         }
 
         .button-container {
             position: absolute;
             bottom: 2%;
-            width: 96%;
-            left: 2%;
+            width: 96%; /* 設置容器的寬度（稍微大於按鈕總寬度） */
+            left: 2%; /* 設置容器的左邊距 */
             display: flex;
-            justify-content: space-between;
+            justify-content: space-between; /* 在容器內部分配空間 */
         }
 
         .button {
-            width: 48%;
-            height: 60px;
-            border: 2px solid transparent;
-            background-color: rgba(0, 0, 0, 0);
+            width: 48%; /* 每個按鈕的寬度（稍微小於容器寬度的一半） */
+            height: 60px; /* 設置按鈕的高度，根據需要調整 */
+            border: 2px solid transparent; /* 透明邊框 */
+            background-color: rgba(0, 0, 0, 0); /* 完全透明背景 */
             text-decoration: none;
-            border-radius: 0.5em;
-            transition: background-color 0.3s ease;
+            border-radius: 0.5em; /* 使用em單位設置圓角 */
+            transition: background-color 0.3s ease; /* 過渡效果 */
         }
 
         .button:hover {
-            background-color: rgba(0, 0, 0, 0.2);
+            background-color: rgba(0, 0, 0, 0.2); /* 懸停時半透明背景 */
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <img src="https://i.pinimg.com/736x/96/93/3d/96933d955f20827f7c6d132a0102211b.jpg" alt="背景圖片" class="background-image">
         <div class="button-container">
             <a href="https://www.evo.v588.co/Register?a=13080" class="button" title="立即註冊"></a>
             <a href="https://lin.ee/42n6YPn" class="button" title="領取優惠"></a>
